tests/bad/inheritance/invalid_type.oc
/// fail: Couldn't find this identifier: Bar

struct Foo : Bar {

}